Snap 1523 (#197)
* [SNAP-1427] Use serialization into direct ByteBuffers at Oplog layer

- added a DirectByteBufferDataOutput extending from Kryo's ByteBufferOutput
  to provide a DataOutput on top of an expanding direct ByteBuffer
  (kryo's impl already uses DirectByteBuffer by default)
- use a new UnsafeHolder.reallocateDirectBuffer above that uses Unsafe.reallocateMemory
  that will do inline expansion if possible; embed a custom Runnable into the Cleaner
  of DirectByteBuffers that can be reset to not free memory in case reallocation
  was done to expand and create a new DirectByteBuffer
- changed the APIs in DiskEntry, OplogSet etc to pass through ValueWrapper which
  has been changed to contain a ByteBuffer instead of a byte[]; in lower level
  internal APIs ByteBuffer is passed directly when "isSerializedObject" flag
  is no longer required
- changed Oplog to use ChannelBufferUnsafeDataOutputStream instead of channel
  and separate writeBuffer; this existing stream already uses a DirectByteBuffer
  to buffer data, as well as provides a pass-through for large DirectByteBuffers (>16K)
  in its write(ByteBuffer) method so the serialized output in DirectByteBufferDataOutput
  can be directly fed to this avoiding any copying for large enough buffers
- changed OverflowOplog similarly; this also simplifies lot of custom serialization,
  flush code in the two Oplog classes
- release direct ByteBuffers more proactively in SQLBinary (as well as above Oplog classes)
  and not depend on GC to queue up the Cleaner references to minimize overall memory
  pressure on the OS
- removed duplicate release calls in SSLSocketChannel (got pasted twice somehow though does not hurt)

* create channel during recovery

* fixing the position of new reallocated buffer in DirectByteBufferDataOutput

* add back FileChannel variable to Oplogs

previous changes replace FileChannel with Channel*OutputStream which contains
the FileChannel already; however for t